# housing

./: .gitignore  .pre-commit-config.yaml  bandit.yml  create_all.py  docker-compose.yml  drop_all.py  pyproject.toml
app/: bandit_demo.py  db.py
app/imports/: import_hms.py  import_products.py
app/migrations/: env.py
app/migrations/versions/: 4bb831eaf52f_add_hms_raw_table_and_raw_schema.py  b86be08a2151_products_hms.py  ee15494d51ff_add_hms_raw_table_and_raw_schema.py  f30fbf1f9396_products_hms.py
app/models/: __init__.py  hms.py  product.py
migrations/: env.py
migrations/versions/: 069b9c691fa6_products_hms.py  bf151e060b4f_products_hms.py
