[project]
name = "housing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.1",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.39",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
    "mypy>=1.15.0",
    "bandit[toml]>=1.8.3"
]

[tool.bandit]
exclude_dirs = ["app/migrations", "tests"]
tests = ["B101", "B102", "B105", "B106", "B307", "B602"]
skips = []
